--- a/templates/top.html
+++ b/templates/top.html
@@ -7,8 +7,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
-            <link href="./style.css" rel="stylesheet" />
-
+            <link href="./css/style.css" rel="stylesheet" />
             <div class="container">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
