added images, bash script

--- a/docs/css/style-portfolio.css
+++ b/docs/css/style-portfolio.css
@@ -24,7 +24,7 @@ h4, h5, h6 {
 }
 
 .lib-bg {
-    background-image: url("./Images/lib-rijks.jpeg");
+    background-image: url("../img/lib-rijks.jpeg");
 
 
   }
