--- a/templates/top.html
+++ b/templates/top.html
@@ -11,7 +11,7 @@
             <div class="container">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Home</a>
+                      <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./portfolio.html">Portfolio</a>
