--- a/docs/css/style-portfolio.css
+++ b/docs/css/style-portfolio.css
@@ -7,27 +7,23 @@ h1, h2, h3 {
     padding-bottom: 0px;
     padding-top: 50px;
     padding-left: 20px;
-    padding-right: 20px;
-}
+    padding-right: 20px; }
 
 h4, h5, h6 {
     font-family: 'Cormorant Garamond', serif;
     text-align: center;
     font-weight: 400;
-    padding-bottom: 0px;
-}
+    padding-bottom: 0px; }
 
 .nav-link {
   font-weight: 700;
   font-family: 'Cormorant Garamond', serif;
-  color: #451925;
+  color: #451925; 
 }
 
 .lib-bg {
     background-image: url("../img/lib-rijks.jpeg");
-
-
-  }
+}
 
 .semitransparent {
     background-color: rgba(255, 255, 255, 0.2);
@@ -37,8 +33,7 @@ h4, h5, h6 {
     display: block;
     margin: auto;
     align-content: center;
-    align-content: space-around;
-  }
+    align-content: space-around; }
 
   p {
     font-family: 'EB Garamond', serif;
@@ -46,6 +41,4 @@ h4, h5, h6 {
     padding: 60px;
     margin: auto;
     align-content: center;
-    color: black;
-
-  } 
+    color: black; } 
