--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1"/>
-            <title>__replace_title__</title>
+            <title> {{ title }} </title>
             <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
@@ -12,10 +12,9 @@
                 <ul class="nav justify-content-end">
                     {% for page in pages %}
                     <li class="nav-item">
-                      <a href="{{ page.output_filename }}">{{ page.title }}</a>
+                      <a href="{{ page.output }}"> {{ page.title }} </a>
                     </li>
                     {% endfor %}
-                    </li>
                   </ul>
             </div>
         </head>
