--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
                 <ul class="nav justify-content-end">
                     {% for page in pages %}
                     <li class="nav-item">
-                      <a href="{{ page.output }}"> {{ page.title }} </a>
+                      <a href="{{ page.link }}">  {{ page.title }}  </a>
                     </li>
                     {% endfor %}
                   </ul>
